syntax = "proto3";

package pbcommon;

enum UserStatus {	
	NotLogin = 0; // 没有登陆 没有使用
	InHall = 1; // 在大厅 没有使用	
	InMatching = 2; // 匹配中
	InGameing = 3; // 游戏中
}

// 断开提示 s -> c
message BrokenTip {
    string Msg = 1;
	// 异地登陆 1 其他*
	uint32 Code = 2;
}

// 错误提示 s -> c
message ErrorTip {
    string Msg = 1;
}

// 桌子信息
message DeskInfo { 
	uint64 Uuid = 1; // 版本号
	uint64 ID = 2; // 桌子ID
	uint64 CreateUserID = 3; // 创建人 0表示系统创建
	int64 CreateTime = 4;
	int64 CreateFee = 14; // 费用 创建时预扣的
	string ArgName = 5;  // 具体游戏参数 如 pbgame_ddz.RoomArg
	bytes ArgValue = 13;
	string CreateUserName = 6;
	string Status = 7; // 
	string GameName = 8; 
	string GameID = 9; 
	int64 ClubID = 11; // 所属俱乐部
	int64 Kind = 12; // 桌子类型 1匹配 2好友 
	repeated uint64 UserIDs = 10; // 桌子中的玩家
	
}

// 会话信息
message SessionInfo {
	uint64 Uuid = 1;
	uint64 UserID = 2;
	string SessionID = 3;	
	UserStatus Status = 4;	
	uint64 AtDeskID = 5;
	string GameName = 6;
	string GameID = 7;
	int64  LastActiveTime = 8;
	uint32 RoomID = 9;
}

// 用户信息
message UserInfo {
	uint64 UserID = 1;	
	string SessionID = 2;	
	string WxID = 3; // 微信id
	double Longitude = 4;
	double Latitude = 5;   
    string Name = 6; // 昵称
    string Sex = 7;
    string Profile = 8;
	string Mobile = 9;		
	uint64 Gold = 10; // 金币
	uint64 Masonry = 11; // 砖石
	uint64 GoldPre = 12; // 预扣金币
	uint64 MasonryPre = 13; // 预扣砖石
	string Agent = 14; // 所属代理
	string IdentityCard = 15; // 身份证号码
	string IdentityCardName = 16; // 身份证名称
	string Password = 17; // 手机登陆密码
	string IP = 18;
	int32 PlayCount = 19; // 局数
	int32 BindMobileCount = 20; // 绑定手机次数，第一次绑定有赠送
	string Place = 21; // 通过IP或者经纬度得到的位置名称
}